--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,18 +52,18 @@ jobs:
         with:
           name: app.jar
           path: ./build/libs/app.jar
-      - name: Deploy to Heroku
-        # You may pin to the exact commit or the version.
-        # uses: AkhileshNS/heroku-deploy@5ef17ff17a3fb8e9ad822ae6a61648a3ef9e0c3d
-        uses: AkhileshNS/heroku-deploy@v3.12.13
-        with:
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_email: michmzr@gmail.com
-          heroku_app_name: getpocket-stats
-          dontuseforce: 0
-          remote_branch: "main"
-        env:
-          HD_MONGODB_DB: test
-          HD_MONGODB_URI: ${{ secrets.MONGODB_URI }}
-          HD_POCKET_CONSUMER_KEY: ${{ secrets.POCKET_CONSUMER_KEY }}
-          HD_BACKEND_URL: https://getpocket-stats.herokuapp.com
+#      - name: Deploy to Heroku
+#        # You may pin to the exact commit or the version.
+#        # uses: AkhileshNS/heroku-deploy@5ef17ff17a3fb8e9ad822ae6a61648a3ef9e0c3d
+#        uses: AkhileshNS/heroku-deploy@v3.12.13
+#        with:
+#          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+#          heroku_email: michmzr@gmail.com
+#          heroku_app_name: getpocket-stats
+#          dontuseforce: 0
+#          remote_branch: "main"
+#        env:
+#          HD_MONGODB_DB: test
+#          HD_MONGODB_URI: ${{ secrets.MONGODB_URI }}
+#          HD_POCKET_CONSUMER_KEY: ${{ secrets.POCKET_CONSUMER_KEY }}
+#          HD_BACKEND_URL: https://getpocket-stats.herokuapp.com
