--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ plugins {
     id 'java'
     id 'groovy'
     id 'jacoco'
-    id "org.sonarqube" version "3.5.0.2730"
+    id 'org.sonarqube' version '4.0.0.2929'
     id 'org.springframework.boot' version '3.0.1'
     id 'io.spring.dependency-management' version '1.1.0'
     id 'com.github.johnrengelman.shadow' version '8.1.1'
@@ -85,13 +85,13 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-jacocoTestReport {
-    reports {
-        xml.required = false
-        csv.required = false
-        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
-    }
-}
+//jacocoTestReport {
+//    reports {
+//        xml.required = false
+//        csv.required = false
+//        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+//    }
+//}
 
 task stage(dependsOn: ['build', 'clean'])
 build.mustRunAfter clean
